[gd_scene load_steps=4 format=3 uid="uid://df48wdk8fbhvr"]

[ext_resource type="Script" uid="uid://4g0ic3tbqy11" path="res://ui/ajustes/sonido.gd" id="1_3545g"]
[ext_resource type="PackedScene" uid="uid://bd21ipd305of2" path="res://ui/elementos/LabelAjustes.tscn" id="1_e2njy"]
[ext_resource type="Texture2D" uid="uid://c7mlhqo87q1yw" path="res://assets/synty/ui/Sprites/FantasyMenus/SPR_FantasyMenus_Scrollbar_Horizontal_03_Frame.png" id="2_3545g"]

[node name="Sonido" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3545g")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.085
anchor_right = 1.0
anchor_bottom = 0.884
offset_top = -0.0800018
offset_bottom = 0.167969
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(1152, 518)
layout_mode = 2
theme_override_constants/separation = 40

[node name="TextureRect" parent="ScrollContainer/VBoxContainer" instance=ExtResource("1_e2njy")]
custom_minimum_size = Vector2(518, 60)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "General"
max_font_size = 40

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/VBoxContainer/TextureRect"]
texture_filter = 6
layout_mode = 1
anchors_preset = -1
anchor_left = 1.02
anchor_top = 0.1
anchor_right = 2.215
anchor_bottom = 0.933
offset_left = -0.200043
offset_right = 0.0999146
offset_bottom = 0.0199966
texture = ExtResource("2_3545g")
expand_mode = 1

[node name="General" type="HSlider" parent="ScrollContainer/VBoxContainer/TextureRect/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.138
anchor_top = -0.18
anchor_right = 0.878
anchor_bottom = 1.2
offset_left = 0.0999908
offset_right = 0.0999756
grow_horizontal = 2
grow_vertical = 2
value = 100.0

[node name="TextureRect3" parent="ScrollContainer/VBoxContainer" instance=ExtResource("1_e2njy")]
custom_minimum_size = Vector2(518, 60)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Musica"
max_font_size = 40

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/VBoxContainer/TextureRect3"]
texture_filter = 6
layout_mode = 1
anchors_preset = -1
anchor_left = 1.02
anchor_top = 0.1
anchor_right = 2.215
anchor_bottom = 0.933
offset_left = -0.200043
offset_right = 0.0999146
offset_bottom = 0.0199966
texture = ExtResource("2_3545g")
expand_mode = 1

[node name="Music" type="HSlider" parent="ScrollContainer/VBoxContainer/TextureRect3/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.138
anchor_top = -0.18
anchor_right = 0.878
anchor_bottom = 1.2
offset_left = 0.0999908
offset_right = 0.0999756
grow_horizontal = 2
grow_vertical = 2
value = 100.0

[node name="TextureRect5" parent="ScrollContainer/VBoxContainer" instance=ExtResource("1_e2njy")]
custom_minimum_size = Vector2(518, 60)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Entorno"
max_font_size = 40

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/VBoxContainer/TextureRect5"]
texture_filter = 6
layout_mode = 1
anchors_preset = -1
anchor_left = 1.02
anchor_top = 0.1
anchor_right = 2.215
anchor_bottom = 0.933
offset_left = -0.200043
offset_right = 0.0999146
offset_bottom = 0.0199966
texture = ExtResource("2_3545g")
expand_mode = 1

[node name="Enviroment" type="HSlider" parent="ScrollContainer/VBoxContainer/TextureRect5/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.138
anchor_top = -0.18
anchor_right = 0.878
anchor_bottom = 1.2
offset_left = 0.0999908
offset_right = 0.0999756
grow_horizontal = 2
grow_vertical = 2
value = 100.0

[node name="TextureRect4" parent="ScrollContainer/VBoxContainer" instance=ExtResource("1_e2njy")]
custom_minimum_size = Vector2(518, 60)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Efectos"
max_font_size = 40

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/VBoxContainer/TextureRect4"]
texture_filter = 6
layout_mode = 1
anchors_preset = -1
anchor_left = 1.02
anchor_top = 0.1
anchor_right = 2.215
anchor_bottom = 0.933
offset_left = -0.200043
offset_right = 0.0999146
offset_bottom = 0.0199966
texture = ExtResource("2_3545g")
expand_mode = 1

[node name="Effects" type="HSlider" parent="ScrollContainer/VBoxContainer/TextureRect4/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.138
anchor_top = -0.18
anchor_right = 0.878
anchor_bottom = 1.2
offset_left = 0.0999908
offset_right = 0.0999756
grow_horizontal = 2
grow_vertical = 2
value = 100.0

[node name="TextureRect2" parent="ScrollContainer/VBoxContainer" instance=ExtResource("1_e2njy")]
custom_minimum_size = Vector2(518, 60)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Combate"
max_font_size = 40

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/VBoxContainer/TextureRect2"]
texture_filter = 6
layout_mode = 1
anchors_preset = -1
anchor_left = 1.02
anchor_top = 0.1
anchor_right = 2.215
anchor_bottom = 0.933
offset_left = -0.200043
offset_right = 0.0999146
offset_bottom = 0.0199966
texture = ExtResource("2_3545g")
expand_mode = 1

[node name="Combat" type="HSlider" parent="ScrollContainer/VBoxContainer/TextureRect2/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.138
anchor_top = -0.18
anchor_right = 0.878
anchor_bottom = 1.2
offset_left = 0.0999908
offset_right = 0.0999756
grow_horizontal = 2
grow_vertical = 2
value = 100.0

[connection signal="drag_ended" from="ScrollContainer/VBoxContainer/TextureRect/TextureRect/General" to="." method="_on_general_drag_ended"]
[connection signal="value_changed" from="ScrollContainer/VBoxContainer/TextureRect3/TextureRect/Music" to="." method="_on_music_value_changed"]
